reports/statements.log
Traceback (most recent call last):
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/alissahuskey/.pyenv/versions/3.8.1/lib/python3.8/asyncio/base_events.py", line 612, in run_until_complete
    return future.result()
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/alissahuskey/Library/Caches/pypoetry/virtualenvs/python-class-Xq3GLStO-py3.8/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import random
num = random.randint(0, 10)
if num > 5:
print(num)
------------------

[03m  File [38;2;254;196;24m"<ipython-input-2-45b9a87981c3>"[03m, line [38;2;249;155;21m4[38;2;231;233;219m
[38;2;249;155;21m    print(num)[38;2;231;233;219m
[38;2;91;196;191m    ^[38;2;231;233;219m
[38;2;239;97;85mIndentationError[38;2;231;233;219m[38;2;239;97;85m:[38;2;231;233;219m expected an indented block

IndentationError: expected an indented block (<ipython-input-2-45b9a87981c3>, line 4)

